--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:16am Fri 19th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:23am Fri 19th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:11am</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 12:16am</td>
 	<td class="accounts"><span class=" hidden">ADS: $116,944.80 (+$2,247.38) @ 12:16a</span><span class="">ADS: [hidden] @ 12:16am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:11am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:16am</td>
 	<td class="accounts">JPB: $13,907.39 (-$50.25) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:11am</td>
-	<td class="accounts">CBA: $79,750.61 (-$27.76) @ 11:51pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:16am</td>
+	<td class="accounts">CBA: $79,750.61 (-$27.76) @ 12:21am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:11am</td>
-	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 11:46pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 12:16am</td>
+	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 12:17am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:14am</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 12:21am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:14am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=559Gb RAM=45% @ 12:11am</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 12:21am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=559Gb RAM=44% @ 12:16am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:14am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 33Gb RAM=32% @ 12:14am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:21am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 33Gb RAM=32% @ 12:22am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:14am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:21am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:14am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 12:21am</td>
 	<td class="todo">Jul 1 (+13d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
