--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 2:59pm Fri 19th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 3:04pm Fri 19th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;2:54pm</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;3:02pm</td>
 	<td class="accounts"><span class=" hidden">ADS: $116,949.10 (+$1,000.95) @ 2:50pm</span><span class="">ADS: [hidden] @ 2:50pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#10060;</span> @ &nbsp;2:54pm</td>
-	<td class="accounts">JPB: $14,136.43 (+$229.05) @ 2:46pm</td>
+	<td class="projects">OD1 <span class="emoji">&#10060;</span> @ &nbsp;3:02pm</td>
+	<td class="accounts">JPB: $14,119.93 (+$212.55) @ 2:57pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;2:54pm</td>
-	<td class="accounts">CBA: $79,753.39 (+$2.78) @ 2:33pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;3:02pm</td>
+	<td class="accounts">CBA: $79,750.61 ($0.00) @ 3:03pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;2:54pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;3:02pm</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 2:58pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;2:58pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;3:04pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;2:58pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=551Gb RAM=39% @ &nbsp;2:54pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;3:04pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=551Gb RAM=40% @ &nbsp;3:02pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;2:58pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 36Gb RAM=65% @ &nbsp;2:58pm</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;3:04pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 36Gb RAM=65% @ &nbsp;3:04pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;2:58pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;3:04pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;2:58pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;3:04pm</td>
 	<td class="todo">Jul 1 (+12d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
