--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:00am Sat 20th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:06am Sat 20th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -101,7 +101,7 @@
 	
 	<tr>
 	<td class="projects">OD1 <span class="emoji">&#11036;</span> @ &nbsp;8:57am</td>
-	<td class="accounts">JPB: $14,072.83 (+$165.45) @ 9:43pm</td>
+	<td class="accounts">JPB: $14,072.83 ($0.00) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
@@ -126,7 +126,7 @@
 	
 	<tr>
 	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 30Gb RAM=60% @ &nbsp;8:59am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 30Gb RAM=69% @ &nbsp;9:06am</td>
 	</tr>
 	
 	<tr>
