--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:12am Sat 20th Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 9:18am Sat 20th Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -96,7 +96,7 @@
 	
 	<tr>
 	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;8:57am</td>
-	<td class="accounts"><span class=" hidden">ADS: $117,308.87 (+$1,360.72) @ 8:45am</span><span class="">ADS: [hidden] @ 8:45am</span></td>
+	<td class="accounts"><span class=" hidden">ADS: $117,106.68 ($0.00) @ 9:14am</span><span class="">ADS: [hidden] @ 9:14am</span></td>
 	</tr>
 	
 	<tr>
@@ -126,7 +126,7 @@
 	
 	<tr>
 	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;8:59am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 28Gb RAM=65% @ &nbsp;9:10am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 26Gb RAM=74% @ &nbsp;9:17am</td>
 	</tr>
 	
 	<tr>
