--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:53pm Sun 21st Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 1:59pm Sun 21st Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:49pm</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:54pm</td>
 	<td class="accounts"><span class=" hidden">ADS: $122,881.15 (-$98.75) @ 1:52pm</span><span class="">ADS: [hidden] @ 1:52pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:49pm</td>
-	<td class="accounts">JPB: $14,538.89 (-$45.45) @ 1:31pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;1:54pm</td>
+	<td class="accounts">JPB: $14,601.28 (+$16.95) @ 1:55pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:49pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;1:54pm</td>
 	<td class="accounts">CBA: $79,785.31 ($0.00) @ 1:40pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:49pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;1:54pm</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 1:32pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:53pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;1:57pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:53pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=518Gb RAM=48% @ &nbsp;1:49pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;1:57pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=518Gb RAM=48% @ &nbsp;1:54pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:53pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 29Gb RAM=68% @ &nbsp;1:53pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ &nbsp;1:57pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 29Gb RAM=68% @ &nbsp;1:57pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:53pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:57pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:53pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;1:57pm</td>
 	<td class="todo">Jul 1 (+10d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
