--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:56pm Sun 21st Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:01am Mon 22nd Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -96,7 +96,7 @@
 	
 	<tr>
 	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 11:55pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $125,460.19 (+$2,480.29) @ 11:32p</span><span class="">ADS: [hidden] @ 11:32pm</span></td>
+	<td class="accounts"><span class=" hidden">ADS: $125,612.39 (+$2,632.49) @ 12:01a</span><span class="">ADS: [hidden] @ 12:01am</span></td>
 	</tr>
 	
 	<tr>
@@ -115,27 +115,27 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 11:55pm</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 11:59pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 11:55pm</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 11:59pm</td>
 	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=509Gb RAM=21% @ 11:55pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:55pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 25Gb RAM=67% @ 11:55pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:59pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 25Gb RAM=67% @ 12:00am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:55pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:59pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 11:55pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 11:59pm</td>
 	<td class="todo">Jul 1 (+10d) [M] OC Fee - Notice Pay</td>
 	</tr>
 	
