--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:33pm Mon 22nd Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 12:38pm Mon 22nd Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:30pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $124,694.83 (+$215.13) @ 12:09pm</span><span class="">ADS: [hidden] @ 12:09pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 12:37pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $124,447.02 (-$32.68) @ 12:38pm</span><span class="">ADS: [hidden] @ 12:38pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:30pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 12:37pm</td>
 	<td class="accounts">JPB: $14,343.43 (-$66.00) @ 12:22pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:30pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 12:37pm</td>
 	<td class="accounts">CBA: $79,750.61 (-$34.70) @ 12:28pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:30pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 12:37pm</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 12:18pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:32pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 12:38pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:32pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=502Gb RAM=33% @ 12:30pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 12:38pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=502Gb RAM=34% @ 12:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:32pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 29Gb RAM=34% @ 12:32pm</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 12:38pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 29Gb RAM=34% @ 12:38pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:32pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 12:38pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:32pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 12:38pm</td>
 	<td class="todo">Jul 1 (+9d) [M] OC Fee - Notice Pay </td>
 	</tr>
 	
