--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:19pm Mon 22nd Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:25pm Mon 22nd Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 10:13pm</td>
-	<td class="accounts"><span class=" hidden">ADS: $121,224.12 (-$3,255.58) @ 9:54pm</span><span class="">ADS: [hidden] @ 9:54pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#9989;</span> @ 10:22pm</td>
+	<td class="accounts"><span class=" hidden">ADS: $121,042.03 (-$3,437.67) @ 10:23p</span><span class="">ADS: [hidden] @ 10:23pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:13pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:22pm</td>
 	<td class="accounts">JPB: $14,154.58 (-$254.85) @ 9:43pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:13pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:22pm</td>
 	<td class="accounts">CBA: $79,750.61 (-$34.70) @ 10:07pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 10:13pm</td>
-	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 9:55pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#9989;</span> @ 10:22pm</td>
+	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 10:25pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 10:18pm</td>
+	<td class="projects">SB2 <span class="emoji">&#11036;</span> @ 10:26pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 10:18pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=492Gb RAM=52% @ 10:13pm</td>
+	<td class="projects">OH1 <span class="emoji">&#11036;</span> @ 10:26pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=492Gb RAM=52% @ 10:22pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#10060;</span> @ 10:18pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 25Gb RAM=35% @ 10:19pm</td>
+	<td class="projects">UR3 <span class="emoji">&#10060;</span> @ 10:26pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 25Gb RAM=35% @ 10:26pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:18pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:26pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 10:18pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#11036;</span> @ 10:26pm</td>
 	<td class="todo">Jul 1 (+9d) [M] OC Fee - Notice Pay </td>
 	</tr>
 	
