--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:17am Tue 23rd Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:23am Tue 23rd Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 10:11am</td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 10:20am</td>
 	<td class="accounts"><span class="">ADS: $122,966.42 (+$24.59) @ 10:02am</span><span class=" hidden">ADS: [hidden] @ 10:02am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:11am</td>
-	<td class="accounts">JPB: $14,154.58 ($0.00) @ 9:54am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:20am</td>
+	<td class="accounts">JPB: $14,154.58 ($0.00) @ 10:14am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:11am</td>
-	<td class="accounts">CBA: $79,750.61 ($0.00) @ 9:47am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:20am</td>
+	<td class="accounts">CBA: $79,771.43 (+$20.82) @ 10:18am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 10:11am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 10:20am</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 10:03am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 10:16am</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 10:22am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 10:16am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=485Gb RAM=55% @ 10:11am</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 10:22am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=485Gb RAM=53% @ 10:20am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 10:16am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 16Gb RAM=80% @ 10:16am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 10:22am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 16Gb RAM=81% @ 10:23am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:16am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:22am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 10:16am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 10:22am</td>
 	<td class="todo">Jul 1 (+8d) [M] OC Fee - Notice Pay </td>
 	</tr>
 	
