--- a/index-hide.html
+++ b/index-hide.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 10:56am Tue 23rd Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 11:02am Tue 23rd Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 10:53am</td>
-	<td class="accounts"><span class=" hidden">ADS: $122,993.43 (+$51.60) @ 10:31am</span><span class="">ADS: [hidden] @ 10:31am</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ 10:57am</td>
+	<td class="accounts"><span class=" hidden">ADS: $122,848.20 (-$93.63) @ 11:00am</span><span class="">ADS: [hidden] @ 11:00am</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:53am</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ 10:57am</td>
 	<td class="accounts">JPB: $14,153.08 (-$1.50) @ 10:43am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:53am</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ 10:57am</td>
 	<td class="accounts">CBA: $79,764.49 (+$13.88) @ 10:48am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 10:53am</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ 10:57am</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 10:34am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 10:56am</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ 11:01am</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 10:56am</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=485Gb RAM=48% @ 10:53am</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ 11:01am</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=485Gb RAM=48% @ 10:57am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 10:56am</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 27Gb RAM=41% @ 10:56am</td>
+	<td class="projects">UR3 <span class="emoji">&#9989;</span> @ 11:01am</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 27Gb RAM=41% @ 11:01am</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 10:56am</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ 11:01am</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 10:56am</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ 11:01am</td>
 	<td class="todo">Jul 1 (+8d) [M] OC Fee - Notice Pay </td>
 	</tr>
 	
