--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<!-- https://drive.google.com/open?id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<!-- https://drive.google.com/uc?export=download&id=12FKFlT3wAKKfgfbs073YNpGD-zIp21k1 -->
 	<table>
-	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 3:51pm Tue 23rd Jun</td></tr>
+	<tr class="major-header"><td class="major-header" colspan="2">FMMJ DASHBOARD @ 3:58pm Tue 23rd Jun</td></tr>
 	
 	<tr>
 	<td class="projects header">::SYSTEMS::</td>
@@ -95,47 +95,47 @@
 	</tr>
 	
 	<tr>
-	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;3:47pm</td>
-	<td class="accounts"><span class="">ADS: $124,823.46 (+$1,881.63) @ 3:23pm</span><span class=" hidden">ADS: [hidden] @ 3:23pm</span></td>
+	<td class="projects">G4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;3:51pm</td>
+	<td class="accounts"><span class="">ADS: $124,732.21 (+$1,790.38) @ 3:53pm</span><span class=" hidden">ADS: [hidden] @ 3:53pm</span></td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;3:47pm</td>
-	<td class="accounts">JPB: $14,162.68 (+$8.10) @ 3:30pm</td>
+	<td class="projects">OD1 <span class="emoji">&#9989;</span> @ &nbsp;3:51pm</td>
+	<td class="accounts">JPB: $14,174.98 (+$20.40) @ 3:52pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;3:47pm</td>
-	<td class="accounts">CBA: $79,750.61 ($0.00) @ 3:22pm</td>
+	<td class="projects">OT1 <span class="emoji">&#9989;</span> @ &nbsp;3:51pm</td>
+	<td class="accounts">CBA: $79,757.55 (+$6.94) @ 3:52pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;3:47pm</td>
+	<td class="projects">H4&nbsp; <span class="emoji">&#11036;</span> @ &nbsp;3:51pm</td>
 	<td class="accounts">ANZ: $7,762.30 ($0.00) @ 3:37pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;3:49pm</td>
+	<td class="projects">SB2 <span class="emoji">&#9989;</span> @ &nbsp;3:58pm</td>
 	<td class="computers header">::COMPUTERS::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;3:49pm</td>
-	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=482Gb RAM=50% @ &nbsp;3:47pm</td>
+	<td class="projects">OH1 <span class="emoji">&#9989;</span> @ &nbsp;3:58pm</td>
+	<td class="computers">Albert:<span class="emoji">&#11036;</span> HDD=482Gb RAM=49% @ &nbsp;3:51pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;3:49pm</td>
-	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 25Gb RAM=33% @ &nbsp;3:50pm</td>
+	<td class="projects">UR3 <span class="emoji">&#11036;</span> @ &nbsp;3:58pm</td>
+	<td class="computers">Spring:<span class="emoji">&#11036;</span> HDD= 25Gb RAM=33% @ &nbsp;3:58pm</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;3:49pm</td>
+	<td class="projects">P0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;3:58pm</td>
 	<td class="todo header">::TODO::</td>
 	</tr>
 	
 	<tr>
-	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;3:49pm</td>
+	<td class="projects">S0&nbsp; <span class="emoji">&#9989;</span> @ &nbsp;3:58pm</td>
 	<td class="todo">Jul 1 (+8d) [M] OC Fee - Notice Pay </td>
 	</tr>
 	
